[metadata]
name = purge-range
version = 0.0.2
description = Purge monotonically named files in folders keeping range endpoints.
long_description =
    file: README.md
    file: docs/index.md
    file: docs/install.md
    file: docs/use.md
    file: docs/changes.md
long_description_content_type = text/markdown
url = https://github.com/sthagen/python-purge_range
author = Stefan Hagen
author_email = stefan@hagen.link
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    compression
    development
    file-processing

[options.entry_points]
console_scripts =
    purge_range = purge_range.cli:main

[options]
python_requires = >=3.6.13
install_requires =
    prefix-compression>=0.0.1
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pylint
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=purge_range
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True

